// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPublishPanel should render the post-publish panel if the post is published 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-published"
    >
      Published
    </div>
    <ForwardRef(Button)
      icon={
        <SVG
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPostpublish)
      focusOnMount={true}
    />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the post-publish panel if the post is scheduled 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-published"
    >
      Scheduled
    </div>
    <ForwardRef(Button)
      icon={
        <SVG
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPostpublish)
      focusOnMount={true}
    />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the pre-publish panel if post status is scheduled but date is before now 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-publish-button"
    >
      <WithSelect(WithDispatch(PostPublishButton))
        focusOnMount={true}
        onSubmit={[Function]}
      />
    </div>
    <ForwardRef(Button)
      icon={
        <SVG
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPrepublish) />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the pre-publish panel if the post is not saving, published or scheduled 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-publish-button"
    >
      <WithSelect(WithDispatch(PostPublishButton))
        focusOnMount={true}
        onSubmit={[Function]}
      />
    </div>
    <ForwardRef(Button)
      icon={
        <SVG
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPrepublish) />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the spinner if the post is being saved 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-publish-button"
    >
      <WithSelect(WithDispatch(PostPublishButton))
        focusOnMount={true}
        onSubmit={[Function]}
      />
    </div>
    <ForwardRef(Button)
      icon={
        <SVG
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <Spinner />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;
